--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
 readme = "README.md"
+repository = "https://github.com/Creative-Media-Group/FragDenStaat"
 
 [tool.poetry.dependencies]
 python = "^3.12"
