--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 repository = "https://github.com/Creative-Media-Group/FragDenStaat"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.8"
+requests = "^2.32.3"
 
 
 [build-system]
